aggiornate date visitazione link + altro

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -77,16 +77,16 @@ Con il presente documento il gruppo \hx{} si impegna a sviluppare un prodotto ch
 \subsubsection{Normativi}
 \begin{itemize}
 	\item Norme di Progetto: \NdP;
-	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}.
+	\item Capitolato d'appalto C6, \proj: \url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato in data 08/02/2017.
 \end{itemize}
 
 \subsubsection{Informativi}
 \begin{itemize}
 	\item \textbf{Studio di Fattibilità}: \SdF;
 	\item \textbf{Diagrammi dei casi d'uso}: \\
-	\url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/E01b.pdf};
+	\url{www.math.unipd.it/~tullio/IS-1/2016/Dispense/E01b.pdf}, visitato in data 08/02/2017;
 	\item \textbf{Analisi dei requisiti}: \\
-	\url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L06.pdf}.
+	\url{www.math.unipd.it/~tullio/IS-1/2016/Dispense/L06.pdf}, visitato in data 08/02/2017.
 \end{itemize}
 
 
