--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -59,13 +59,13 @@ Esso è suddiviso nelle seguenti sezioni:
 \subsubsection{Riferimenti normativi}
 \begin{itemize}
 	\item \NdP;
-	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}, visitato il 07/02/2017;
-	\item Regolamento del progetto didattico] \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 07/02/2017;
-	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}, visitato il 07/02/2017.
+	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}, visitato il 08/02/2017;
+	\item Regolamento del progetto didattico] \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 08/02/2017;
+	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}, visitato il 08/02/2017.
 \end{itemize}
 \subsubsection{Riferimenti informativi} \label{sec:ref}
 \begin{itemize}
-	\item Slides del corso di Ingegneria del Software: \url{http://www.math.unipd.it/~tullio/IS-1/2016/};
+	\item Slides del corso di Ingegneria del Software: \url{http://www.math.unipd.it/~tullio/IS-1/2016/}, visitato il 08/02/2017;
 	\item I. Sommerville, \emph{Software Engineering} (8a ed.) --- capitolo 4, \emph{Software Processes}.
 \end{itemize}
 
