--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -17,7 +17,6 @@
 \maketitle
 \include{diario}
 \tableofcontents
-\newpage
 
 \section{Introduzione}
 	\subsection{Scopo del documento}
@@ -33,16 +32,16 @@
 		\subsubsection{Normativi}
 		\begin{itemize}
 			\item \NdP;
-			\item \textbf{Capitolato d'Appalto C6, \proj}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf};
-			\item \textbf{Standard ISO/IEC 12207:2008}:
-			\\ \url{http://ieeexplore.ieee.org/document/4475826/};
-			\item \textbf{Standard ISO/IEC 15504}:
-			\\ \url{https://en.wikipedia.org/wiki/ISO/IEC_15504};
-			\item \textbf{Standard ISO/IEC 9126}:
-			\\ \url{https://it.wikipedia.org/wiki/ISO/IEC_9126};
-			\item \textbf{PDCA(Plan-Do-Check-Act)}:
-			\\ \url{https://it.wikipedia.org/wiki/Ciclo_di_Deming}.
+			\item \textbf{Capitolato d'Appalto C6, \proj}: \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato il 08/02/2017;
+			\item \textbf{Standard ISO/IEC 12207:2008}: \\
+			\url{ieeexplore.ieee.org/document/4475826/}, visitato il 08/02/2017;
+			\item \textbf{Standard ISO/IEC 15504}: \\
+			\url{en.wikipedia.org/wiki/ISO/IEC_15504}, visitato il 08/02/2017;
+			\item \textbf{Standard ISO/IEC 9126}: \\
+			\url{it.wikipedia.org/wiki/ISO/IEC_9126}, visitato il 08/02/2017;
+			\item \textbf{PDCA (Plan, Do, Check, Act)}: \\
+			\url{it.wikipedia.org/wiki/Ciclo_di_Deming}, visitato il 08/02/2017.
 		\end{itemize}
 		
 		\subsubsection{Informativi}
@@ -50,16 +49,16 @@
 			\item \textbf{Analisi dei Requisiti}: \AdR;
 			\item \textbf{Piano di Progetto}: \PdP;
 			\item \textbf{Glossario}: \Glossario;
-			\item \textbf{Indice di Gulpease}:
-			\\ \url{http://it.wikipedia.org/wiki/Indice_Gulpease};
-			\item \textbf{Regole del Progetto Didattico}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
-			\item \textbf{Slide Qualità del Software}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L10.pdf};
-			\item \textbf{Slide Qualità del Prodotto}:
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L11.pdf}.
+			\item \textbf{Indice di Gulpease}: \\
+			\url{it.wikipedia.org/wiki/Indice_Gulpease}, visitato il 08/02/2017;
+			\item \textbf{Regole del Progetto Didattico}: \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 08/02/2017;
+			\item \textbf{Slide Qualità del Software}: \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Dispense/L10.pdf}, visitato il 08/02/2017;
+			\item \textbf{Slide Qualità del Prodotto}: \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Dispense/L11.pdf}, visitato il 08/02/2017.
 		\end{itemize}
-\newpage
+
 \section{Visione generale della strategia di gestione della qualità}
 	\subsection{Obiettivi di qualità}
 	In questa sezione vengono illustrati in modo quanto più completo ed esaustivo gli obiettivi di qualità che il gruppo intende perseguire nel corso 	dello svolgimento del progetto, opportunamente declinati nelle due sottosezioni Qualità di processo e Qualità di prodotto.
@@ -218,7 +217,6 @@
 			\end{itemize}
 	\subsection{Scadenze temporali}
 	Le scadenze temporali stabilite dal gruppo sono definite in dettaglio nel documento \PdP.
-\newpage
 \section{La strategia di gestione della qualità nel dettaglio}
 	\subsection{Risorse}
 		\subsubsection{Risorse necessarie}
@@ -242,7 +240,6 @@
 			Le risorse software disponibili sono costituite dagli \gloss{editor} di testo utilizzati per la stesura dei documenti in \gloss{Latex}, gli \gloss{IDE} impiegati a supporto dell'attività di codifica, le applicazioni online e le estensioni per i controlli sulla leggibilità e la complessità dei documenti in riferimento all'indice Gulpease. Più in dettaglio gli strumenti software impiegati per l'attività di Verifica sono illustrati nel documento \NdP.
 			\end{itemize}
 		
-\newpage
 \section{Test}
 	\subsection{Tipi di test}
 	Sono stati individuati quattro tipologie di test:
@@ -254,7 +251,6 @@
 	\end{itemize}
 	Si sottolinea che la specifica dei test delle diverse tipologie verrà inserita nel presente documento a seguito della fase di progettazione del prodotto in esame.
 
-\newpage
 \section{Resoconto attività di verifica}
 All'interno di questa sezione vengono riportati gli esiti delle attivit di verifica svolte sui processi attivati e sui relativi prodotti secondo quanto stabilito nel \PdP.
 	\subsection{Revisione dei requisiti}
