--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -24,10 +24,10 @@
 	Inoltre sarà presente una descrizione degli altri capitolati con le ragioni che hanno portato il gruppo ad escluderli dalla scelta.
 	
 	\subsection{Scopo del prodotto}
-	\scopo{}
+	\scopo
 	
 	\subsection{Glossario}
-	\presgloss{}
+	\presgloss
 	
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
@@ -37,39 +37,36 @@
 		\subsubsection{Informativi}
 		\begin{itemize}
 			\item \textbf{Glossario}: \Glossario;
-			\item \textbf{Capitolato d'Appalto C1}, \emph{APIM}: An \gloss{API} Market Platform
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C1.\gloss{pdf}};
-			\item \textbf{Capitolato d'Appalto C2}, \emph{AtAVi}: Accoglienza tramite Assistente Virtuale
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C2.pdf};
-			\item \textbf{Capitolato d'Appalto C3}, \emph{DeGeOP}: A Designer and Geo-localizer Web App for Organizational Plants
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C3.pdf};
-			\item \textbf{Capitolato d'Appalto C4}, \emph{eBread}: applicazione di lettura per dislessici
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C4.pdf};
-			\item \textbf{Capitolato d'Appalto C5}, \emph{Monolith}: an interactive bubble provider
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C5.pdf};
-			\item \textbf{Capitolato d'Appalto C6}, \emph{SWEDesigner}: \gloss{editor} di diagrammi \gloss{UML} con generazione di codice
-			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf};
+			\item \textbf{Capitolato d'Appalto C1}, \emph{APIM}: An \gloss{API} Market Platform \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C1.pdf}, visitato il 08/02/2017;
+			\item \textbf{Capitolato d'Appalto C2}, \emph{AtAVi}: Accoglienza tramite Assistente Virtuale \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C2.pdf}, visitato il 08/02/2017;
+			\item \textbf{Capitolato d'Appalto C3}, \emph{DeGeOP}: A Designer and Geo-localizer Web App for Organizational Plants \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C3.pdf}, visitato il 08/02/2017;
+			\item \textbf{Capitolato d'Appalto C4}, \emph{eBread}: applicazione di lettura per dislessici \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C4.pdf}, visitato il 08/02/2017;
+			\item \textbf{Capitolato d'Appalto C5}, \emph{Monolith}: an interactive bubble provider \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C5.pdf}, visitato il 08/02/2017;
+			\item \textbf{Capitolato d'Appalto C6}, \emph{SWEDesigner}: \gloss{editor} di diagrammi \gloss{UML} con generazione di codice \\
+			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato il 08/02/2017;
 		\end{itemize}
 
 
 	
 \section{Studio di fattibilità del capitolato scelto}
-	\subsection{\emph{SWEDesigner}: editor di diagrammi UML con generazione di codice}
+	\subsection{\proj: editor di diagrammi UML con generazione di codice}
 		\subsubsection{Descrizione}
 		Lo scopo principale del capitolato è quello di realizzare un'\gloss{applicazione web} composta da almeno due disegnatori
-		ed un coordinatore, che permetta all'utente di costruire diagrammi UML rappresentativi del prodotto da svilupparsi e generi a partire da essi codice 
-		\gloss{Java} o \gloss{JavaScript}.
-		\\In particolare l'editor dovrebbe concentrarsi su uno specifico dominio applicativo (l'esempio fornito nel capitolato d'appalto è relativo ai software 
-		di giochi da tavolo) per andare a costituire una sorta di \gloss{framework} per la produzione della relativa famiglia di prodotti.
+		ed un coordinatore, che permetta all'utente di costruire diagrammi UML rappresentativi del prodotto da svilupparsi e generi a partire da essi codice \gloss{Java} o \gloss{JavaScript}.
 		
-		
+		In particolare l'editor dovrebbe concentrarsi su uno specifico dominio applicativo (l'esempio fornito nel capitolato d'appalto è relativo ai software di giochi da tavolo) per andare a costituire una sorta di \gloss{framework} per la produzione della relativa famiglia di prodotti.
+
 		Lo scopo profondo del capitolato è quello di analizzare quali diagrammi UML siano i più adatti allo scopo di descrivere l'architettura 
 		e le componenti funzionali di un progetto software e come si possa concertare una loro integrazione per arrivare a produrre un eseguibile vero e proprio. 
-		\\Attualmente, infatti, UML non è altro che un grande aggregato di convenzioni di modellazione che coprono, sì, a diversi livelli di raffinamento differenti 
-		fasi e aspetti dello sviluppo di prodotti software, ma al contempo risultano a tal punto eterogenei l'uno rispetto all'altro da non risultare integrabili e componibili. 
-		\\La richiesta è quindi quella di indagare come si potrebbe superare la debolezza intrinseca dell'Unified Modeling Language nella sincronizzazione tra 
-		codice e quanto disegnato nei diagrammi stessi e sperimentare la possibilità di avvicinare le due fasi di progettazione e codifica, esplorando le 
-		interazioni e le eventuali estensioni necessarie a legare fra loro queste due fasi.
+
+		Attualmente, infatti, UML non è altro che un grande aggregato di convenzioni di modellazione che coprono, sì, a diversi livelli di raffinamento differenti fasi e aspetti dello sviluppo di prodotti software, ma al contempo risultano a tal punto eterogenei l'uno rispetto all'altro da non risultare integrabili e componibili. 
+
+		La richiesta è quindi quella di indagare come si potrebbe superare la debolezza intrinseca dell'Unified Modeling Language nella sincronizzazione tra codice e quanto disegnato nei diagrammi stessi e sperimentare la possibilità di avvicinare le due fasi di progettazione e codifica, esplorando le interazioni e le eventuali estensioni necessarie a legare fra loro queste due fasi.
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo} Il dominio applicativo del seguente capitolato riguarda l'ambito della generazione di codice a partire dal linguaggio UML. Il prodotto si rivolge quindi, ad un target di programmatori interessati alla creazione di programmi appartenenti all'ambito dei giochi da tavolo. I clienti verranno guidati durante il percorso di realizzazione del proprio prodotto, ma dovranno possedere una certa esperienza e conoscenza nell'ambito della programmazione software, del linguaggio UML e dei suoi diagrammi.
 			
@@ -113,16 +110,12 @@
 		di chiavi scadute o non valide.
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo}
-			Come stanno facendo anche grandi aziende operanti nel settore della tecnologia digitale, il team di ItalianaSoftware sta focalizzando i propri sforzi su una nuova visione dell'architettura 
-			dei programmi basata non su grandi moduli funzionali bensì su unità minimali: i microservizi. Questi sono in grado di comporsi e cooperare in modo 
-			tale da formare aggregati sempre più complessi fino ad arrivare ad un'unica applicazione monolitica. Un'innovazione, questa, che potrebbe 
-			trasformare completamente la struttura dei sistemi informativi: da monolitici, con processi e dati difficilmente modificabili, diventerebbero 
-			adattivi e flessibili in quanto composti da tanti componenti interdipendenti, ciascuno dei quali offre funzionalità ben delineate.
+			Come stanno facendo anche grandi aziende operanti nel settore della tecnologia digitale, il team di ItalianaSoftware sta focalizzando i propri sforzi su una nuova visione dell'architettura dei programmi basata non su grandi moduli funzionali bensì su unità minimali: i microservizi. Questi sono in grado di comporsi e cooperare in modo tale da formare aggregati sempre più complessi fino ad arrivare ad un'unica applicazione monolitica. Un'innovazione, questa, che potrebbe trasformare completamente la struttura dei sistemi informativi: da monolitici, con processi e dati difficilmente modificabili, diventerebbero adattivi e flessibili in quanto composti da tanti componenti interdipendenti, ciascuno dei quali offre funzionalità ben delineate.
 			\paragraph{Dominio tecnologico}
 			Per quanto riguarda il set di tecnologie da utilizzarsi, ItalianaSoftware richiede ai gruppi impegnati sul progetto:
 			\begin{itemize}
 			\item di sviluppare il front end della web application con l'ausilio della terna JavaScript, \gloss{HTML} e \gloss{CSS3};
-			\item di scegliere tra una base di dati \gloss{SQL} o \gloss{NoSQL} per quanto riguarda il database.\\
+			\item di scegliere tra una base di dati \gloss{SQL} o \gloss{NoSQL} per quanto riguarda il database.
 			\end{itemize}
 			L'azienda suggerisce fortemente di utilizzare per la rappresentazione delle interfacce e per la creazione del marketplace
 			il linguaggio orientato ai microservizi: Jolie.
@@ -135,28 +128,23 @@
 			\item l'opportunità di apprendere il linguaggio Jolie direttamente dall'azienda che lo ha creato.
 		\end{itemize}
 		Uno dei fattori chiave nella decisione se partecipare o meno all'appalto di tale progetto è proprio l'uso del linguaggio Jolie.
-		\\Da un lato la necessità di imparare un nuovo linguaggio di programmazione ha sempre un importante valore a livello formativo, dall'altro, 
-		però, non è ancora ben chiaro quali siano le reali potenzialità di Jolie per affermarsi nel sovraffollato panorama tecnologico odierno.
+
+		Da un lato la necessità di imparare un nuovo linguaggio di programmazione ha sempre un importante valore a livello formativo, dall'altro, però, non è ancora ben chiaro quali siano le reali potenzialità di Jolie per affermarsi nel sovraffollato panorama tecnologico odierno.
 		\subsubsection{Valutazione finale}
-		Il gruppo \hx{} ha ritenuto opportuno scegliere un capitolato che permettesse il confronto con tecnologie che per i membri fossero nuove,
-		ma al contempo già pienamente affermate in quanto a utilizzo, funzionalità, potenzialità. Tale scelta non trova riscontro in questo capitolato.
+		Il gruppo \hx{} ha ritenuto opportuno scegliere un capitolato che permettesse il confronto con tecnologie che per i membri fossero nuove, ma al contempo già pienamente affermate in quanto a utilizzo, funzionalità, potenzialità. Tale scelta non trova riscontro in questo capitolato.
 		
 	\subsection{Capitolato C2: \emph{AtAVi}: Accoglienza tramite Assistente Virtuale}
 		\subsubsection{Descrizione}
-		Lo scopo di questo capitolato è quello di realizzare un applicativo web che permetta una prima accoglienza degli ospiti in visita all'ufficio 
-		dell'azienda zero12. Il progetto dovrebbe comporsi di tre parti ben distinte: 
+		Lo scopo di questo capitolato è quello di realizzare un applicativo web che permetta una prima accoglienza degli ospiti in visita all'ufficio dell'azienda zero12. Il progetto dovrebbe comporsi di tre parti ben distinte: 
 		\begin{itemize}
 			\item un'interfaccia web per permettere all'utente di interagire con l'utilizzatore del sistema;
 			\item un'interfaccia per trasmettere informazioni attraverso il canale comunicativo aziendale \gloss{Slack};
 			\item un sistema che sfrutti gli \gloss{AWS} per l'interazione con le API dell'assistente virtuale scelto.
 		\end{itemize}
-		Il capitolato si configura pertanto sia come un'indagine su ulteriori ambiti di integrazione di tali tecnologie, sia come la dimostrazione 
-		di come anche in ambito aziendale esse possano contribuire a rendere più efficiente e moderno l'ambiente lavorativo.
+		Il capitolato si configura pertanto sia come un'indagine su ulteriori ambiti di integrazione di tali tecnologie, sia come la dimostrazione di come anche in ambito aziendale esse possano contribuire a rendere più efficiente e moderno l'ambiente lavorativo.
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo}
-			Il progetto proposto si inserisce all'interno di un quadro di ampio respiro quale la trasformazione digitale dei sistemi aziendali e la 
-			presenza sempre più pregnante nella vita quotidiana di applicativi basati proprio sull'interazione con assistenti virtuali, in grado di 
-			organizzare e gestire i nostri impegni e adattarsi alle nostre preferenze e richieste.
+			Il progetto proposto si inserisce all'interno di un quadro di ampio respiro quale la trasformazione digitale dei sistemi aziendali e la presenza sempre più pregnante nella vita quotidiana di applicativi basati proprio sull'interazione con assistenti virtuali, in grado di organizzare e gestire i nostri impegni e adattarsi alle nostre preferenze e richieste.
 			
 			\paragraph{Dominio tecnologico}
 			Fra le tecnologie con cui è richiesto confrontarsi per la realizzazione di tale progetto vi sono:
@@ -189,7 +177,8 @@
 		\subsubsection{Descrizione}
 		Lo scopo del capitolato in esame è quello di creare un'interfaccia di tipo web app utilizzabile anche su mobile, per visualizzare su di una 
 		mappa geografica gli elementi costitutivi del processo produttivo di una particolare azienda.
-		\\Tale web app deve permettere di:
+
+		Tale web app deve permettere di:
 		\begin{itemize}
 			\item definire la struttura organizzativa di un'azienda;
 			\item riportare tale struttura a livello di mappa geografica;
@@ -198,16 +187,15 @@
 		\end{itemize}
 		Quest'ultimo punto verrebbe attuato utilizzando il database per le situazioni di danno dell'azienda e il server di analisi, sempre di proprietà dell'azienda,
 		che opera utilizzando un algoritmo proprietario.
-		\\L'applicazione deve inoltre garantire un corretto funzionamento su desktop, tablet e dispositivi mobile e utilizzare API e database proprietari dell'azienda.
+
+		L'applicazione deve inoltre garantire un corretto funzionamento su desktop, tablet e dispositivi mobile e utilizzare API e database proprietari dell'azienda.
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo}
-			Il contesto in cui l'applicazione opera costituisce una realtà di attuale interesse, soprattutto in un paese come il nostro dove sempre più spesso le catastrofi climatiche,
-			quali terremoti, inondazioni, trombe d'aria, mettono in difficoltà intere aziende.
-			\\Data pertanto la mancanza di una piena consapevolezza riguardo a tale problematica (il rischio relativo alle interruzioni di lavoro è poco conosciuto) 
-			e la frequenza con cui questa si presenta, il contributo di tale applicazione potrebbe essere in futuro estremamente significativo.
-			\\Il servizio offerto dall'applicativo andrebbe inoltre a coprire un vuoto: le aziende di assicurazioni, infatti, non hanno ora strumenti 
-			adeguati per valutare il rischio legato all'interruzione dei lavori per cause esterne. Molte aziende infatti si appoggiano al servizio 
-			RiskApp, alcune delle quali di notevole importanza nel ramo assicurazioni.
+			Il contesto in cui l'applicazione opera costituisce una realtà di attuale interesse, soprattutto in un paese come il nostro dove sempre più spesso le catastrofi climatiche, quali terremoti, inondazioni, trombe d'aria, mettono in difficoltà intere aziende.
+
+			Data pertanto la mancanza di una piena consapevolezza riguardo a tale problematica (il rischio relativo alle interruzioni di lavoro è poco conosciuto) e la frequenza con cui questa si presenta, il contributo di tale applicazione potrebbe essere in futuro estremamente significativo.
+
+			Il servizio offerto dall'applicativo andrebbe inoltre a coprire un vuoto: le aziende di assicurazioni, infatti, non hanno ora strumenti adeguati per valutare il rischio legato all'interruzione dei lavori per cause esterne. Molte aziende infatti si appoggiano al servizio RiskApp, alcune delle quali di notevole importanza nel ramo assicurazioni.
 			\paragraph{Dominio tecnologico}
 			Nonostante la relativa libertà nell'utilizzo dello \gloss{stack} tecnologico le tecnologie proposte sono:
 			\begin{itemize}
@@ -219,7 +207,8 @@
 			\end{itemize}
 		\subsubsection{Aspetti positivi e negativi}
 		Per quanto riguarda gli aspetti positivi, oltre all'utilità dell'applicazione stessa, non ne sono stati evidenziati altri.
-		\\Tra le criticità trovate, spiccano:
+		
+		Tra le criticità trovate, spiccano:
 		\begin{itemize}
 			\item la poca chiarezza nella descrizione del progetto;
 			\item la nebulosità dei requisiti del capitolato.
@@ -231,24 +220,23 @@
 		
 	\subsection{Capitolato C4: \emph{eBread}: applicazione di lettura per dislessici}
 		\subsubsection{Descrizione}
-		Il progetto prevede la realizzazione di un'applicazione per dispositivi mobili in ambiente Android che agevoli, grazie all'uso di appropriate tecnologie, 
-		la lettura da parte di persone affette da dislessia.
-		\\La proposta richiede inoltre che l'applicativo, indifferentemente un lettore di ebook o un client di messaggistica, utilizzi un motore di sintesi 
-		vocale come ausilio alla lettura, evidenziando le parole del testo, in modo sincronizzato con l'audio sintetizzato. 
-		\\Un'ulteriore funzionalità da fornire, considerata molto utile per persone affette da dislessia, consiste nella la possibilità di 
-		modificare la visualizzazione del contenuto da leggere attraverso l'uso di particolari sistemi di colori, spaziature fra lettere, differenti dimensioni 
+		Il progetto prevede la realizzazione di un'applicazione per dispositivi mobili in ambiente Android che agevoli, grazie all'uso di appropriate tecnologie, la lettura da parte di persone affette da dislessia.
+
+		La proposta richiede inoltre che l'applicativo, indifferentemente un lettore di ebook o un client di messaggistica, utilizzi un motore di sintesi vocale come ausilio alla lettura, evidenziando le parole del testo, in modo sincronizzato con l'audio sintetizzato. 
+
+		Un'ulteriore funzionalità da fornire, considerata molto utile per persone affette da dislessia, consiste nella la possibilità di modificare la visualizzazione del contenuto da leggere attraverso l'uso di particolari sistemi di colori, spaziature fra lettere, differenti dimensioni 
 		e tipo dei caratteri e layout di visualizzazione.
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo}
 			Le problematiche che il progetto proposto dal capitolato si prevede di affrontare sono sicuramente di grande attualità.
-			\\Da un lato la dislessia, che nel nostro paese al giorno d'oggi rappresenta il disturbo dell'apprendimento più diffuso e che incide non poco nella 
-			vita delle persone che ne sono affette in quanto rende difficoltosa una delle attività fondamentali della routine quotidiana: la lettura. 
-			\\Dall'altro si spinge il gruppo fornitore a confrontarsi con una delle tecnologie che sta avendo negli ultimi tempi una diffusione sempre 
-			maggiore, quella del \gloss{Text-to-Speech}, alla base di applicazioni di grande importanza quali screenreader, lettori di messaggi, voci di 
-			assistenti virtuali e probabilmente futura interfaccia per tutte quelle attività in cui è precluso, o comunque limitato, l'utilizzo della vista.
+
+			Da un lato la dislessia, che nel nostro paese al giorno d'oggi rappresenta il disturbo dell'apprendimento più diffuso e che incide non poco nella vita delle persone che ne sono affette in quanto rende difficoltosa una delle attività fondamentali della routine quotidiana: la lettura. 
+
+			Dall'altro si spinge il gruppo fornitore a confrontarsi con una delle tecnologie che sta avendo negli ultimi tempi una diffusione sempre maggiore, quella del \gloss{Text-to-Speech}, alla base di applicazioni di grande importanza quali screenreader, lettori di messaggi, voci di assistenti virtuali e probabilmente futura interfaccia per tutte quelle attività in cui è precluso, o comunque limitato, l'utilizzo della vista.
 			\paragraph{Dominio tecnologico}
 			Viene lasciato un ampio margine di libertà per quanto riguarda le tecnologie da impiegarsi, purché risultino adeguate allo scopo. 
-			\\Gli unici due vincoli principali in questo senso sono:
+
+			Gli unici due vincoli principali in questo senso sono:
 			\begin{itemize}
 			\item la realizzazione di una applicazione per dispositivi mobili, preferibilmente per sistema operativo Android;
 			\item l'utilizzo di un servizio di sintesi vocale, con consiglio per il motore di sintesi “Flexible and Adaptive Text-To-Speech”.
@@ -258,33 +246,32 @@
 			si suggerisce di partire da uno già esistente, possibilmente open source.
 		\subsubsection{Aspetti positivi e negativi}
 		Tra le criticità è stato evidenziato il fatto che in tale capitolato ci sia da sviluppare un applicazione per dispositivi mobili.
-		\\Le applicazioni per dispositivi mobili, infatti, richiedono un particolare bagaglio di conoscenze e una certa esperienza in tale campo che
-		il gruppo ha ritenuto di non possedere e di non essere in grado di apprendere in quantità necessaria per svolgere tale capitolato che si è prefissato.
+
+		Le applicazioni per dispositivi mobili, infatti, richiedono un particolare bagaglio di conoscenze e una certa esperienza in tale campo che il gruppo ha ritenuto di non possedere e di non essere in grado di apprendere in quantità necessaria per svolgere tale capitolato che si è prefissato.
 		
 		\subsubsection{Valutazione finale}
-		Complice una presentazione del progetto forse sottotono ed una tematica, anche se attuale e viva soprattutto negli ambienti 
-		educativi della società odierna, non capace di spingere la motivazione dei membri del gruppo, si è scelto di procedere all'appalto di un 
-		differente capitolato.
+		Complice una presentazione del progetto forse sottotono ed una tematica, anche se attuale e viva soprattutto negli ambienti educativi della società odierna, non capace di spingere la motivazione dei membri del gruppo, si è scelto di procedere all'appalto di un differente capitolato.
 		
 	\subsection{Capitolato C5: \emph{Monolith}: an interactive bubble provider}
 		\subsubsection{Descrizione}
 		Lo scopo del capitolato è quello di realizzare un framework che consenta agli sviluppatori di creare in modo relativamente semplice delle 
 		interactive bubbles in grado di integrarsi con l'ambiente l'applicazione di messagistica Rocket.chat.
-		\\Una interactive bubble viene intesa dal proponente come una sorta di mini-applicativo autonomo all'interno del canale di comunicazione 
+
+		Una interactive bubble viene intesa dal proponente come una sorta di mini-applicativo autonomo all'interno del canale di comunicazione 
 		che consente di arricchire di funzionalità il client di messaggistica in uso e condividere informazioni complesse e strutturate. 
-		\\A scopo dimostrativo occorre includere delle bolle interattive predefinite pronte da essere utilizzate da parte degli utenti finali.
+
+		A scopo dimostrativo occorre includere delle bolle interattive predefinite pronte da essere utilizzate da parte degli utenti finali.
 		
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo}
 			Le problematiche affrontate dal presente capitolato risultano sicuramente interessanti ed attuali.
-			\\Si riconosce prima di tutto che al giorno d'oggi il più importante canale comunicativo è costituito dalle applicazioni di chat, 
-			utilizzate in ogni ambito della vita quotidiana: per relazionarci con gli amici, per collaborare in ambito lavorativo, per rimanere 
+
+			Si riconosce prima di tutto che al giorno d'oggi il più importante canale comunicativo è costituito dalle applicazioni di chat, utilizzate in ogni ambito della vita quotidiana: per relazionarci con gli amici, per collaborare in ambito lavorativo, per rimanere 
 			connessi a distanza.
-			\\Inoltre sempre più stringente è la necessità di scambiarsi all'interno di tali contesti informazioni più complesse e strutturate di singoli messaggi 
-			(come ad esempio dati relativi ad un volo aereo, alla prenotazione in un certo locale, etc.) che rimangano aggiornate e coerenti con 
-			le fonti da cui sono state tratte.
-			\\Le interactive bubbles rappresenterebbero la soluzione ideale a tale problematica, che al giorno d'oggi si risolve invece con uno 
-			scambio intensivo di numerosi messaggi singoli. 
+
+			Inoltre sempre più stringente è la necessità di scambiarsi all'interno di tali contesti informazioni più complesse e strutturate di singoli messaggi (come ad esempio dati relativi ad un volo aereo, alla prenotazione in un certo locale, etc.) che rimangano aggiornate e coerenti con le fonti da cui sono state tratte.
+
+			Le interactive bubbles rappresenterebbero la soluzione ideale a tale problematica, che al giorno d'oggi si risolve invece con uno scambio intensivo di numerosi messaggi singoli. 
 			\paragraph{Dominio tecnologico}
 			Le tecnologie da utilizzarsi nel progetto sono le seguenti:
 			\begin{itemize}
@@ -295,16 +282,15 @@
 			Viene inoltre richiesto che il codice sorgente di Monolith e la relativa versione dimostrativa siano pubblicate e versionate utilizzando 
 			\gloss{GitHub} o \gloss{Bitbucket}.
 		\subsubsection{Aspetti positivi e negativi}
-		L'ambito applicativo del progetto risulta sicuramente ricco di spunti interessanti, soprattutto per l'importanza cruciale che i client di 
-		messaggistica odierni hanno assunto nello scambio di informazioni.
-		\\Tra gli aspetti negativi messi in evidenza ci sono:
+		L'ambito applicativo del progetto risulta sicuramente ricco di spunti interessanti, soprattutto per l'importanza cruciale che i client di messaggistica odierni hanno assunto nello scambio di informazioni.
+
+		Tra gli aspetti negativi messi in evidenza ci sono:
 		\begin{itemize}
 			\item lontananza dei proponenti, la quale potrebbe incidere su una comunicazione proficua con l'azienda proponente;
 			\item lo sviluppo di un'applicazione per dispositivi mobili e tutte le criticità che ne derivano;
 			\item un insieme di tecnologie ritenute non molto interessanti dai membri del gruppo.
 		\end{itemize}
 		\subsubsection{Valutazione finale}
-		La maggior parte dei membri del gruppo non ha dimostrato grande interesse in merito alla proposta, e pertanto si è scelto di procedere 
-		all'appalto di un differente capitolato.
+		La maggior parte dei membri del gruppo non ha dimostrato grande interesse in merito alla proposta, e pertanto si è scelto di procedere all'appalto di un differente capitolato.
 
 \end{document}
